# synf-sys

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Availability.h.1618D61CE88C4E77.idx  AvailabilityInternal.h.B4B305CC3202B99D.idx  AvailabilityVersions.h.99F55DD4B787FD9D.idx  _OSByteOrder.h.56DCFB1F7E9D93E1.idx  __stddef_max_align_t.h.422303E251E181A1.idx  __stddef_null.h.FD3BCBB9F5A5AB53.idx  __stddef_offsetof.h.E5683CB3BB5752DE.idx  __stddef_ptrdiff_t.h.7A389DC9400672FE.idx  __stddef_rsize_t.h.3B0C7073ED4E8427.idx  __stddef_wchar_t.h.695F1F3AC43A2AD9.idx  _blkcnt_t.h.451FA05970820CFF.idx  _blksize_t.h.DA4882BB692A88B0.idx  _common.h.872B74488E2A74D8.idx  _ct_rune_t.h.9F0A94F048A31DD5.idx  _dev_t.h.F9F46ED685755A7F.idx  _endian.h.3859A8B1BD7151B5.idx  _endian.h.FF6B1286817F9F86.idx  _errno_t.h.CD15C882D886ADDA.idx  _fd_clr.h.C1BC46065932F644.idx  _fd_copy.h.DC717B2B40E35BD3.idx  _fd_def.h.9C1BC5E86AAB2C3A.idx  _fd_setsize.h.B202173E3DCACA49.idx  _fsblkcnt_t.h.8B69C715EB9A648A.idx  _fsfilcnt_t.h.9B8F33DD60B6EA45.idx  _fsid_t.h.EF9DDF91428D7217.idx  _graftdmg_un.h.2F6D8062D84379A5.idx  _id_t.h.D9D9DF7AD8A3D103.idx  _in_addr_t.h.76161FB91230C34D.idx  _ino64_t.h.A675FE307CA58EF9.idx  _key_t.h.88F616312DC9E1C4.idx  _limits.h.BF9C5ED484566C3D.idx  _mach_port_t.h.DFD9FF2048288C88.idx  _malloc.h.9D97A9BD2FA19D68.idx  _mcontext.h.8B3E322867336F6D.idx  _nlink_t.h.16E8FCC81D1FDAAA.idx  _null.h.E480DE1D004F6F88.idx  _off_t.h.C10B111C4D771A80.idx  _param.h.DD5C5BB26091BF25.idx  _printf.h.1335F2FFB9CB07C8.idx  _pthread_attr_t.h.34A32658305B1485.idx  (+74 more)
.github/workflows/: c-ci.yml
source/: cpu.c  disk.c  main.c
source/headers/: cpu.h  disk.h  ram.h
source/lib/api/: handler.c
source/lib/linux/: cpu.c  device.h  disk.c  ram.c
source/lib/osx/: cpu.c  cpu.h  device.c  (+5 more)
source/linux/: cpu.c  ram.c
source/osx/: cpu.c  ram.c
(+13 files in other folders)
